Finish comment delete action.

--- a/app/views/layouts/_confirm_dialog.html.erb
+++ b/app/views/layouts/_confirm_dialog.html.erb
@@ -1,4 +1,7 @@
-<div class="modal fade" id="confirm-dialog" tabindex="-1" role="dialog">
+<div class="modal fade"
+     id=<%= dialogid %>
+     tabindex="-1"
+     role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
