--- a/app/views/comments/_create_comment.html.erb
+++ b/app/views/comments/_create_comment.html.erb
@@ -1,5 +1,6 @@
-<li class="mission-comment"
-    data-action="mouseenter->comment#mouseEnterComment">
+<li id=<%= comment.hashid %>
+    class="mission-comment"
+  data-action="mouseenter->comment#mouseEnterComment">
   <div class="mission-comment-user">
     <%= User.find(comment.user_id).name %>
   </div>
