--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
-    <%= render "layouts/confirm_dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMission" %>
+    <%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMission" %>
     <%= render "layouts/mission_toolbar" %>
 
     <div class="board-box min-board-height right-float-menu-parent"
