Make project item align from left to right even project count less than gird size.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -526,6 +526,7 @@ li {
 .grid-container {
     grid-template-columns: auto auto auto auto;
     display: grid;
+    justify-content: start;
 }
 
 .project-item {
