--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -5,6 +5,28 @@
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
     <div class="board-box">
+      <div class="member-title">成员</div>
+      <div class="member-count">(共 10 人)</div>
+      <ul>
+	<li class="member-item flex-vcenter">
+	  <div class="member-item-icon">Icon</div>
+	  <div class="member-item-name">王勇</div>
+	  <div class="member-item-status">超级管理员</div>
+	  <div class="member-item-email">wangyong@deepin.com</div>
+	</li>
+        <li class="member-item flex-vcenter">
+          <div class="member-item-icon">Icon</div>
+          <div class="member-item-name">王勇</div>
+          <div class="member-item-status">超级管理员</div>
+          <div class="member-item-email">wangyong@deepin.com</div>
+        </li>
+        <li class="member-item flex-vcenter">
+          <div class="member-item-icon">Icon</div>
+          <div class="member-item-name">王勇</div>
+          <div class="member-item-status">超级管理员</div>
+          <div class="member-item-email">wangyong@deepin.com</div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
