Use JS filter invite messages, rails/form can't work with list input data.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -7,7 +7,7 @@
     <div class="board-box">
       <div class="member-title">成员</div>
       <div class="member-count">(共 10 人)</div>
-      <%= link_to "添加新成员", team_invites_path, :class => "float-right add-link-button member-invite-button" %>
+      <%= link_to "添加新成员", new_team_invite_path, :class => "float-right add-link-button member-invite-button" %>
       <ul>
 	<li class="member-item flex-vcenter">
 	  <div class="member-item-icon">Icon</div>
