--- a/app/views/invites/new.html.erb
+++ b/app/views/invites/new.html.erb
@@ -13,20 +13,21 @@
     <% end %>
 
     <div class="board-box"
-	 data-controller="invite">
+         data-controller="invite">
       <h3 class="invite-title">添加新成员</h3>
       <ul class="invite-email-list">
-	<li class="invite-email-item">
-	  <input type="text"
-		 class="invite-edit-input"
-		 placeholder="请输入新成员的邮箱">
-	  <select>
-	    <option value="member">成员</option>
-	    <option value="admin">管理员</option>
-	  </select>
-	</li>
-	<li class="invite-email-item">
-          <input type="text"
+        <li class="invite-email-item">
+          <input type="email"
+                 class="invite-edit-input"
+                 placeholder="请输入新成员的邮箱"
+		 autofocus="true">
+          <select>
+            <option value="member">成员</option>
+            <option value="admin">管理员</option>
+          </select>
+        </li>
+        <li class="invite-email-item">
+          <input type="email"
                  class="invite-edit-input"
                  placeholder="请输入新成员的邮箱">
           <select>
@@ -34,8 +35,8 @@
             <option value="admin">管理员</option>
           </select>
         </li>
-	<li class="invite-email-item">
-          <input type="text"
+        <li class="invite-email-item">
+          <input type="email"
                  class="invite-edit-input"
                  placeholder="请输入新成员的邮箱">
           <select>
@@ -47,12 +48,12 @@
 
       <a href="#"
          class="add-link-button invite-link-button"
-	 data-action="invite#addNewInviteItem">
+         data-action="invite#addNewInviteItem">
         再增加一个
       </a>
 
       <button class="btn-sm invite-submit-button break-inline-block"
-	      data-action="invite#clickSubmitButton">
+              data-action="invite#clickSubmitButton">
         发送邀请
       </button>
     </div>
