--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1428,14 +1428,6 @@ textarea {
     font-size: 20px;
 }
 
-.member-item-status {
-    display: inline-block;
-    font-size: 13px;
-    color: #666;
-    width: 300px;
-    margin-left: 5px;
-}
-
 .member-item-email {
     display: inline-block;
     font-size: 16px;
@@ -1489,4 +1481,25 @@ textarea {
     border-bottom: 1px solid #eee;
     outline: none;
     width: 300px;
+}
+
+.member-type-super-admin {
+    display: inline-block;
+    font-size: 13px;
+    color: orange;
+    margin-left: 5px;
+}
+
+.member-type-admin {
+    display: inline-block;
+    font-size: 13px;
+    color: #666;
+    margin-left: 5px;
+}
+
+.member-type-member {
+    display: inline-block;
+    font-size: 13px;
+    color: #666;
+    margin-left: 5px;
 }
