--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -7,7 +7,7 @@
     <div class="board-box">
       <div class="member-title">成员</div>
       <div class="member-count">(共 10 人)</div>
-      <%= link_to "添加新成员", new_team_invite_path, :class => "float-right add-link-button member-invite-button" %>
+      <%= link_to "添加新成员", new_team_member_path, :class => "float-right add-link-button member-invite-button" %>
       <ul>
         <% @member_array.each do |member| %>
           <li class="member-item flex-vcenter">
