--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -19,9 +19,9 @@
       <%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个项目吗?", controller: "project", action: "project#deleteProject" %>
 
       <h3>项目设置</h3>
-      <div class="project-setting-action">
-	<h4 class="project-setting-action-title">删除项目</h4>
-	<span class="project-setting-action-summary">项目删除后，所有的内容也将被立刻删除，请谨慎操作。</span>
+      <div class="setting-page-action">
+	<h4 class="setting-page-action-title">删除项目</h4>
+	<span class="setting-page-action-summary">项目删除后，所有的内容也将被立刻删除，请谨慎操作。</span>
 	<button class="btn btn-default project-delete-button"
 	        data-toggle="modal"
                 data-target="#confirm-dialog">
