--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -32,11 +32,9 @@
       <div class="setting-page-action">
 	<h4 class="setting-page-action-title">取消对 <%= @user_name %> 的邀请</h4>
 	<span class="setting-page-action-summary">取消邀请后，发送给他的邀请链接将失效，无法激活账号。</span>
-	<button class="btn btn-default project-delete-button"
-                data-toggle="modal"
-                data-target="#confirm-dialog">
+	<div class="setting-page-delete-link">
           了解, 取消邀请
-        </button>
+        </div>
       </div>
     </div>
 
