--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -26,7 +26,14 @@
 
       <div>
 	<h4 class="setting-page-action-title">他没有收到邀请邮件?</h4>
-	<span class="setting-page-action-summary">如果 <%= @user_name %> 没有收到邀请邮件，请将下面的邀请地址直接发给他：</span>
+	<span class="setting-page-action-summary">如果 <%= @user_name %> 没有收到邀请邮件，请点击下面按钮重新发送激活邮件：</span>
+	<div>
+	  <button class="btn btn-default setting-page-normal-button"
+                  data-toggle="modal"
+                  data-target="#confirm-dialog">
+            重新发送激活邮件
+          </button>
+	</div>
       </div>
 
       <div class="setting-page-action">
