Finish resend action.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -31,7 +31,8 @@
 	<h4 class="setting-page-action-title">他没有收到邀请邮件?</h4>
 	<span class="setting-page-action-summary">如果 <%= @user_name %> 没有收到邀请邮件，请点击下面按钮重新发送激活邮件：</span>
 	<div>
-	  <button class="btn btn-default setting-page-normal-button"
+	  <button id="resend-inivite-button"
+		  class="btn btn-default setting-page-normal-button"
 		  data-action="member#resendActivationMail">
             重新发送激活邮件
           </button>
