Refacotry code with ruby coding style.

--- a/app/views/comments/_create_comment.html.erb
+++ b/app/views/comments/_create_comment.html.erb
@@ -5,7 +5,7 @@
     <%= User.find(comment.user_id).name %>
   </div>
   <div class="mission-comment-date">
-    <%= comment.get_format_date %>
+    <%= comment.format_comment_date %>
   </div>
   <div class="mission-comment-content">
     <%= comment.content %>
