--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <li><%= link_to "项目", team_projects_url(params[:team_id]), :class => "top-header-item" %></li>
       <li><%= link_to "动态", root_path, :class => "top-header-item" %></li>
       <li><%= link_to "团队", team_members_url(params[:team_id]), :class => "top-header-item" %></li>
-      <li><%= link_to "我自己", root_path, :class => "top-header-item" %></li>
+      <li><%= link_to "我自己", user_path(current_user.id), :class => "top-header-item" %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
