--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -17,7 +17,7 @@
 
       <div class="phone-page-scroll-area">
         <ul id="phoneSortableContainer">
-          <% Team.find_by_hashid(params[:team_id]).projects.each do |project| %>
+          <% current_team.projects.each do |project| %>
             <%= link_to project_url(project.hashid) do %>
               <li class="phone-project-item-box flex-vcenter">
                 <span class="glyphicon <%= project.icon %> phone-project-icon"></span>
