--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <div class="grid-container" id="sortableContainer">
-        <% Team.find_by_hashid(params[:team_id]).projects.each do |project| %>
+        <% current_team.projects.each do |project| %>
 	  <%= link_to project_url(project.hashid) do %>
             <div class="project-item">
               <div class="flex-column-center">
