--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,9 @@
       <li><a><span class="glyphicon glyphicon-bell phone-bottom-item-icon top-header-item"></span></a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle link-button-small" data-toggle="dropdown">
-          <span class="top-header-item">账户</span>
+          <span class="top-header-item">
+	    <%= current_user.name %>
+	  </span>
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
