--- a/app/views/comments/_create_comment_list.html.erb
+++ b/app/views/comments/_create_comment_list.html.erb
@@ -1,6 +1,8 @@
 <ul class="mission-comment-list"
     data-controller="comment"
-    data-action="mouseleave->comment#mouseLeaveComment">
+    <% if team_administrator? %>
+    data-action="mouseleave->comment#mouseLeaveComment"
+    <% end %> >
   <% mission.comments.each do |comment| %>
   <%= render "comments/create_comment", comment: comment %>
   <% end %>
