--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -15,19 +15,19 @@
     <% end %>
 
     <div class="board-box min-board-height">
-
-      <%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个项目吗?", controller: "project", action: "project#deleteProject" %>
-
-      <h3>项目设置</h3>
-      <div class="setting-page-action">
-	<h4 class="setting-page-action-title">删除项目</h4>
-	<span class="setting-page-action-summary">项目删除后，所有的内容也将被立刻删除，请谨慎操作。</span>
-	<button class="btn btn-default setting-page-delete-button"
-	        data-toggle="modal"
-                data-target="#confirm-dialog">
-	  了解风险, 删除这个项目
-	</button>
-      </div>
+      <% if team_administrator? %>
+	<%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个项目吗?", controller: "project", action: "project#deleteProject" %>
+	<h3>项目设置</h3>
+	<div class="setting-page-action">
+	  <h4 class="setting-page-action-title">删除项目</h4>
+	  <span class="setting-page-action-summary">项目删除后，所有的内容也将被立刻删除，请谨慎操作。</span>
+	  <button class="btn btn-default setting-page-delete-button"
+	          data-toggle="modal"
+                  data-target="#confirm-dialog">
+	    了解风险, 删除这个项目
+	  </button>
+	</div>
+      <% end %>
     </div>
   </body>
 </html>
