--- a/app/views/layouts/_mission_toolbar.html.erb
+++ b/app/views/layouts/_mission_toolbar.html.erb
@@ -1,9 +1,11 @@
 <div class="mission-toolbar"
      data-controller="mission"
      data-action="mouseleave->mission#mouseLeaveMissionToolbar">
-  <a href="#"
-     class="mission-toolbar-item glyphicon glyphicon-trash"
-     data-action="mission#clickDeleteMissionButton"></a>
+  <% if team_administrator? %>
+    <a href="#"
+       class="mission-toolbar-item glyphicon glyphicon-trash"
+       data-action="mission#clickDeleteMissionButton"></a>
+  <% end %>
   <a href="#"
      class="mission-toolbar-item glyphicon glyphicon-pencil"
      data-action="mission#clickEditMissionButton"></a>
