--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,8 +7,10 @@
     <div class="board-box">
 
       <div class="link-button-group">
-        <span class="glyphicon glyphicon-plus"></span>
-        <%= link_to "新建项目", new_team_project_path, :class => "link-button" %>
+	<% if team_administrator? %>
+          <span class="glyphicon glyphicon-plus"></span>
+          <%= link_to "新建项目", new_team_project_path, :class => "link-button" %>
+	<% end %>
         <div class="float-right">
           <span class="glyphicon glyphicon-star link-button"></span>
           <span class="glyphicon glyphicon-th-large link-button"></span>
